--- a/settings-zed.json
+++ b/settings-zed.json
@@ -1,11 +1,3 @@
-// Zed settings
-//
-// For information on how to configure Zed, see the Zed
-// documentation: https://zed.dev/docs/configuring-zed
-//
-// To see all of Zed's default settings without changing your
-// custom settings, run `zed: open default settings` from the
-// command palette (cmd-shift-p / ctrl-shift-p)
 {
   "autosave": "on_focus_change",
   "icon_theme": "Material Icon Theme",
@@ -18,6 +10,22 @@
     "dark": "Ayu Dark"
   },
   "languages": {
+    "Python": {
+      "language_servers": ["ty", "!basedpyright", "..."],
+      "format_on_save": "on",
+      "formatter": {
+        "external": {
+          "command": "poetry",
+          "arguments": [
+            "run",
+            "black",
+            "--stdin-filename",
+            "{buffer_path}",
+            "-"
+          ]
+        }
+      }
+    },
     "Ruby": {
       "language_servers": ["ruby-lsp", "!solargraph", "!rubocop"],
       "formatter": "language_server"
@@ -40,6 +48,16 @@
           "formatting": true
         },
         "formatter": "standard"
+      }
+    },
+    "basedpyright": {
+      "settings": {
+        "basedpyright.analysis": {
+          "diagnosticMode": "workspace",
+          "inlayHints": {
+            "callArgumentNames": false
+          }
+        }
       }
     }
   }
